dfir_rs/tests/compile-fail-stable/surface_missing_args.rs
../compile-fail/surface_missing_args.rs